--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ nav ul li a {
     font-weight: 800;
 }
 
+img{
+    max-width: 100px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .btn{
     border-radius: 40px;
 }
@@ -66,7 +72,7 @@ nav ul li a {
     display:block;
     width:28px;
     height:3px;
-    background-color:rgb(255, 254, 254);
+    background-color: #0f3047;
     border-radius: 3px;
     transition: all 0.3s;
 }
@@ -80,7 +86,7 @@ nav ul li a {
 }
 
 .menu-bars input:checked ~ span:nth-child(2){
-    background-color: white;
+    background-color: #0f3047;
     transform: rotate(45deg) translate(-1px, -1px);
 }
 .menu-bars input:checked ~ span:nth-child(4){
@@ -114,7 +120,7 @@ nav ul li a {
         justify-content: space-evenly;
         flex-direction: column;
         align-items: center;
-        background-color: rgb(126, 43, 204);
+        background-color: #0f3047;
         z-index: -1;
         transform: translateX(100%);
         transition: all 1s;
